[project]
name = "repo2text"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.25.1",
    "anthropic>=0.26.0",
    "instructor>=1.2.5", 
    "python-dotenv>=1.0.1",
    "prompt-toolkit>=3.0.43",
    "inquirerpy>=0.3.4",
    "esprima>=4.0.1",
    "pycparser>=2.22"
]

[project.scripts]
repo2text = "repo2text.repo2text:main"

[tool.hatch.build.targets.wheel]
packages = ["repo2text"]